--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -51,8 +51,17 @@ a {
     overflow: hidden;
 }
 /* ========Header======== */
-.header {
+.header-fixed {
     background: #e6f0ff;
+    padding-top: 26px;
+    position: sticky;
+    top: -26px;
+    z-index: 1;
+}
+.hero-wrap {
+    background: #e6f0ff;
+    display: flex;
+    flex-direction: column;
     height: 100vh;
     position: relative;
 }
@@ -98,7 +107,7 @@ a {
 }
 
 .hero {
-    margin-top: 130px;
+    padding-top: 130px;
 }
 
 .hero .info {
