sua loi can giua noi dung hero

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,6 +66,7 @@ a {
 .hero-wrap {
     background: #e6f0ff;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     height: calc(100vh - 90px);
     position: relative;
@@ -111,34 +112,27 @@ a {
     border-radius: 8px;
 }
 
-.hero {
-    padding-top: 130px;
-}
-
-.hero .info {
+.hero-wrap .info {
     width: 51%;
 }
-.hero .sub-title {
+.hero-wrap .sub-title {
     color: #687690;
     font-size: 1.8rem;
-    font-family: Poppins;
     font-weight: 500;
     letter-spacing: 0.18px;
 }
 
-.hero .title {
+.hero-wrap .title {
     margin-top: 8px;
     color: #000336;
     font-size: 6.2rem;
-    font-family: Poppins;
     font-weight: 700;
     line-height: 76px;
 }
 
-.hero .desc {
+.hero-wrap .desc {
     color: #5a6473;
     font-size: 1.8rem;
-    font-family: Poppins;
     font-weight: 400;
     margin-top: 30px;
 }
